# blue_archive_auto_script

./: .gitignore  .gitmodules  404.html  hashmap.json  i18n.html  index.html  main.py  markdown-examples.html  pyproject.toml  qodana.yaml  requirements-linux.txt  requirements-windows.txt  requirements.txt  test.html  thanks.html
assets/: app.045VVGrn.js  app.3kLKpV2t.js  app.6Q3LIObO.js  app.B-8g-l2j.js  app.BAhoEI6f.js  app.BIVfKgvM.js  app.BJXcxvs8.js  app.BScqFxUj.js  app.BTo31Bok.js  app.BWIEyhab.js  app.BYR3_LE7.js  app.B_-msbA_.js  app.BaojQIRA.js  app.BfIi1ZMN.js  app.Bg5BfhXT.js  app.Bn5PNHzF.js  app.Bz2wbEMO.js  app.C8qdhzfl.js  app.CCJqdQKE.js  app.CPiJRW-m.js  app.CQUGnL-6.js  app.CZBU17VT.js  app.CZZvk-1i.js  app.CaUzAuRJ.js  app.CbHS7_Iu.js  app.CjYRcWol.js  app.Ckz4pOOk.js  app.Cn501Nwh.js  app.CrNobKyz.js  app.CtNsRiUa.js  app.D0wiuuVt.js  app.D4MnlxpV.js  app.DSPX8W9V.js  app.DZLQIMlQ.js  app.Dc3-sBIZ.js  app.DiSn94Am.js  app.Dpju-lJj.js  app.Dq6mz_PR.js  app.DsUPiqTU.js  app.Dte3Qz4l.js  (+2426 more)
core/: Baas_thread.py  color.py  picture.py  position.py  utils.py
develop_doc/: develop.html  develop_format.html  develop_guide.html  docs.html  env.html  log.html
develop_tools/: update_schaledb_activities.py
docs/: NAVIGATOR_IMPROVEMENTS.md
module/: __init__.py  clear_special_task_power.py  collect_daily_free_power.py  collect_pass_reward.py  rewarded_task.py  scrimmage.py
usage_doc/: CLI.html  about.html  activity.html  api-examples.html  config.html  destroyer.html  downloads.html  faq.html  features.html  guide.html  qq_group_regulation.html  report.html  (+3 more)
(+269 files in other folders)
