[project]
name = "blue_archive_auto_script"
version = "1.4.3"
description = "用于实现蔚蓝档案自动化"
authors = [{ name = "pur1fying", email = "2274916027@qq.com" }]
dependencies = [
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2", # it solves windows platform error since newest version not available.
    "numpy==2.3.3",
    "av==15.1.0",
    "win11toast; platform_system == 'Windows'",
    "adbutils<2.10.0",
    "uiautomator2==3.4.2",
    "opencv-python==4.11.0.86",
    "PyQt-Fluent-Widgets==1.9.0",
    "pyinstaller==6.16.0",
    "requests==2.32.5",
    "dulwich==0.24.2",
    "psutil==7.1.0",
    "tomli==2.3.0",
    "tomli_w==1.2.0",
    "PyAutoGUI==0.9.54",
    "mss==10.1.0"
]
requires-python = ">=3.14"
readme = "README.md"
license = "GPL-3.0-only"
